# mkdocs-books

./: .gitignore  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/foo/: bar.md  duck.md
mkdocs_plugin_books/: README.md  __main__.py  config.py  formatters.py  helpers.py  plugin.py  renderer.py  transformers.py
mkdocs_plugin_books/templates/: template.cls
mkdocs_plugin_books/templates/covers/: circles.tex
